--- a/src/components/Event/index.vue.scss
+++ b/src/components/Event/index.vue.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 .section-bg {
     background-image: url(https://marathondreamcup.vn/wp-content/uploads/2023/06/12.webp);
     width: 100%;
@@ -5,21 +6,54 @@
     background-position: 50% 50%;
     background-repeat: no-repeat !important;
     background-size: cover !important;
-    opacity: 1;
-
-    .fill {
-        height: 100%;
-        left: 0;
-        margin: 0 !important;
-        padding: 0 !important;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
     .section-bg-overlay {
-
         background-color: rgba(0, 80, 202, 0.907);
     }
+}
 
+.fill {
+    height: 100%;
+    left: 0;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: absolute !important;
+    right: 0;
+    top: 0;
+}
+
+.section-content {
+    position: relative !important;
+    .row {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1200px;
+    }
+    img {
+        width: 100%;
+        border-radius: 10px;
+    }
+}
+
+.section-bg-overlay {
+    background-color: rgba(0, 80, 202, 0.907);
+}
+
+.col {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0 15px 30px;
+    @media (min-width: 850px) {
+        &.large-5 {
+            flex-basis: math.percentage(math.div(5, 12));
+            max-width: math.percentage(math.div(5, 12));
+        }
+        &.large-7 {
+            flex-basis: math.percentage(math.div(7, 12));
+            max-width: math.percentage(math.div(7, 12));
+        }
+    }
 }
