--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-/* ./src/index.css */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Sawarabi+Gothic&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+    font-family: "Inter", sans-serif;
+}
