--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Sawarabi+Gothic&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Sawarabi+Gothic&display=swap);
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 body {
-    font-family: "Inter", sans-serif;
+    font-family: Inter, sans-serif;
+    color: #f1f1f1
 }
