--- a/src/components/PurposeJoin/index.vue.scss
+++ b/src/components/PurposeJoin/index.vue.scss
@@ -13,6 +13,15 @@
 
 .tabbed-content {
     width: 36%;
+    @media (min-width: 320px) {
+        width: 100%;
+    }
+}
+
+.section-content {
+    @media (max-width: 560px) {
+        padding: 30px 0;
+    }
 }
 
 .col {
@@ -24,6 +33,22 @@
     margin-right: auto;
     position: relative;
     max-width: 1200px;
+    @media (max-width: 560px) {
+        padding: 0 20px;
+        .group-content {
+            flex-direction: column;
+            .tabbed-content {
+                margin: 0 20px;
+                // .txt-content {
+                //     text-align: left;
+                // }
+            }
+        }
+        img {
+            margin-top: 30px;
+            height: 50%;
+        }
+    }
 }
 
 .tab {
