--- a/src/components/RegisterSection/index.vue.scss
+++ b/src/components/RegisterSection/index.vue.scss
@@ -1,14 +1,14 @@
 @use 'sass:math';
 @import url(../../../assets/css/animation.scss);
 .section-bg {
-    background-image: url(https://marathondreamcup.vn/wp-content/uploads/2023/06/12.webp);
+    background-image: url(../../../assets/images/chaymarathon-bgr.jpeg);
     width: 100%;
     height: 900px;
     background-position: 50% 50%;
     background-repeat: no-repeat !important;
     background-size: cover !important;
     .section-bg-overlay {
-        background-color: rgba(0, 80, 202, 0.907);
+        background-color: rgba(20, 20, 20, 0.86);
     }
 }
 
@@ -20,6 +20,12 @@
     position: absolute !important;
     right: 0;
     top: 0;
+}
+
+.row-small {
+    .col {
+        padding-bottom: 0 !important;
+    }
 }
 
 .section-content {
@@ -47,12 +53,18 @@
 .col {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     margin: 0;
     padding: 0 15px 30px;
+    img:hover {
+        scale: 1.03;
+        transition: 0.3s;
+    }
     @media (min-width: 850px) {
-        &.large-5 {
-            flex-basis: math.percentage(math.div(5, 12));
-            max-width: math.percentage(math.div(5, 12));
+        &.large-6 {
+            flex-basis: math.percentage(math.div(6, 12));
+            max-width: math.percentage(math.div(6, 12));
         }
         &.large-7 {
             flex-basis: math.percentage(math.div(7, 12));
