--- a/src/components/PurposeJoin/index.vue.scss
+++ b/src/components/PurposeJoin/index.vue.scss
@@ -13,13 +13,16 @@
 
 .tabbed-content {
     width: 36%;
-    @media (min-width: 320px) {
+    @media (max-width: 1024px) {
         width: 100%;
     }
 }
 
 .section-content {
-    @media (max-width: 560px) {
+    @media (max-width: 1024px) {
+        padding: 60px 0;
+    }
+    @media (max-width: 520px) {
         padding: 30px 0;
     }
 }
@@ -33,7 +36,7 @@
     margin-right: auto;
     position: relative;
     max-width: 1200px;
-    @media (max-width: 800px) {
+    @media (max-width: 1024px) {
         padding: 0 20px;
         .group-content {
             flex-direction: column;
@@ -46,7 +49,13 @@
         }
         img {
             margin-top: 30px;
+        }
+    }
+    @media (max-width: 800px) {
+        img {
+            margin-top: 30px;
             height: 50%;
+            width: auto !important;
         }
     }
 }
