--- a/src/components/Prize/index.vue.scss
+++ b/src/components/Prize/index.vue.scss
@@ -1,7 +1,7 @@
 .section-bg {
   background-image: url(../../../assets/images/map-section-bgr.jpg);
   width: 100%;
-  height: 720px;
+  height: 760px;
   background-position: 50% 50%;
   background-repeat: no-repeat !important;
   background-size: cover !important;
@@ -27,33 +27,34 @@
 
   .row {
     height: 100%;
-    max-width: 1172px;
+    max-width: 1250px;
     margin: 0px auto;
     padding: 50px 0;
   }
-  .devider {
-    height: 100%;
-    width: 5%;
-    float: left;
-  }
+
   .col {
-    height: 100%;
-    width: 47.5%;
-    float: left;
+    // height: 100%;
+    // width: 47.5%;
+    // float: left;
+    padding: 20px;
+    // margin-left: 10px;
   }
 
   .col h2 {
-    color: #000;
+    color: #2d63f7;
     text-transform: uppercase;
+    text-align: center;
     font-weight: 900;
-    font-size: 150%;
+    font-size: 170%;
     margin-bottom: 20px;
+    letter-spacing: 1px;
+    word-spacing: 5px;
   }
   .col img {
-    // height: 100%;
     border: 4px solid #2d63f7;
     border-radius: 20px;
     transition: 0.3s;
+    // box-shadow: 3px 3px 30px #0000003f;
   }
 
   .col img:hover,
