--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Sawarabi+Gothic&display=swap);
+@import url(../assets/font/inter/stylesheet.css);
 @import url(../assets/css/main.scss);
 @tailwind base;
 @tailwind components;
