--- a/src/components/EventMap/index.vue.scss
+++ b/src/components/EventMap/index.vue.scss
@@ -29,7 +29,7 @@
     height: 100%;
     max-width: 1172px;
     margin: 0px auto;
-    padding: 50px 0;
+    padding: 5% 0;
   }
   .devider {
     height: 100%;
@@ -59,5 +59,24 @@
   .col img:hover,
   .col img:active {
     scale: 1.03;
+  }
+
+  @media only screen and (max-width: 550px) {
+    .devider {
+      width: 100%;
+      height: 10%;
+    }
+
+    .col {
+      width: 90%;
+      height: 40%;
+      margin-left: 5%;
+    }
+
+    .col img {
+      height: 100%;
+    }
+
+    height: 1000px;
   }
 }
