--- a/src/components/News/index.vue.scss
+++ b/src/components/News/index.vue.scss
@@ -1,67 +1,75 @@
 .section-bg {
-  background-image: url(../../../assets/images/map-section-bgr.jpg);
-  width: 100%;
-  height: 760px;
-  background-position: 50% 50%;
-  background-repeat: no-repeat !important;
-  background-size: cover !important;
-  opacity: 1;
-  .fill {
-    height: 100%;
-    left: 0;
-    margin: 0 !important;
-    padding: 0 !important;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .section-bg-overlay {
-    background-color: rgba(255, 255, 255, 0.866);
-  }
-  .content {
-    height: 100%;
-  }
-  .row {
-    height: 100%;
-    max-width: 1250px;
-    margin: 0px auto;
-    padding: 50px 0;
-  }
-  h1 {
-    color: black;
-    font-size: 200%;
-    font-weight: 800;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .col {
-    padding: 20px;
-    height: 100%;
-  }
-
-  .col img {
+    background-image: url(../../../assets/images/map-section-bgr.jpg);
     width: 100%;
-    height: 300px;
-    border-radius: 20px;
-    transition: 0.3s;
-    object-fit: cover;
-  }
-
-  .col h2 {
-    color: #2d63f7;
-    text-align: center;
-    font-weight: 900;
-    font-size: 110%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-
-  .col h2:hover,
-  .col h2:active {
-    color: black;
-  }
-
-  .col p {
-    color: black;
-  }
+    height: 760px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    opacity: 1;
+    .fill {
+        height: 100%;
+        left: 0;
+        margin: 0 !important;
+        padding: 0 !important;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .section-bg-overlay {
+        background-color: rgba(255, 255, 255, 0.866);
+    }
+    .content {
+        height: 100%;
+    }
+    .row {
+        height: 100%;
+        max-width: 1250px;
+        margin: 0px auto;
+        padding: 50px 0;
+    }
+    h1 {
+        color: black;
+        font-size: 200%;
+        font-weight: 800;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .col {
+        padding: 20px;
+        height: 100%;
+    }
+    .col img {
+        width: 100%;
+        height: 300px;
+        border-radius: 20px;
+        transition: 0.3s;
+        object-fit: cover;
+    }
+    .col h2 {
+        color: #2d63f7;
+        text-align: center;
+        font-weight: 900;
+        font-size: 110%;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-align: left;
+    }
+    .col h2:hover,
+    .col h2:active {
+        color: black;
+    }
+    .col p {
+        color: black;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-align: left;
+    }
 }
