--- a/src/components/EventMap/index.vue.scss
+++ b/src/components/EventMap/index.vue.scss
@@ -43,7 +43,7 @@
   }
 
   .col h2 {
-    color: #000;
+    color: #2d63f7;
     text-transform: uppercase;
     font-weight: 900;
     font-size: 150%;
