--- a/src/components/Prize/index.vue.scss
+++ b/src/components/Prize/index.vue.scss
@@ -1,52 +1,120 @@
 .section-bg {
-    background-image: url(../../../assets/images/map-section-bgr.jpg);
-    width: 100%;
-    height: 760px;
-    background-position: 50% 50%;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    opacity: 1;
-    .fill {
-        height: 100%;
-        left: 0;
-        margin: 0 !important;
-        padding: 0 !important;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .section-bg-overlay {
-        background-color: rgba(255, 255, 255, 0.866);
-    }
-    .content {
-        height: 100%;
-    }
+  background-image: url(../../../assets/images/map-section-bgr.jpg);
+  width: 100%;
+  height: 760px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  opacity: 1;
+  .fill {
+    height: 100%;
+    left: 0;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .section-bg-overlay {
+    background-color: rgba(255, 255, 255, 0.866);
+  }
+  .content {
+    height: 100%;
+  }
+  .row {
+    height: 100%;
+    max-width: 1250px;
+    margin: 0px auto;
+    padding: 50px 0;
+  }
+  .col {
+    padding: 20px;
+  }
+  .col h2 {
+    color: #2d63f7;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    font-size: 170%;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+    word-spacing: 5px;
+  }
+  .col img {
+    border: 4px solid #2d63f7;
+    border-radius: 20px;
+    transition: 0.3s;
+  }
+  .col img:hover,
+  .col img:active {
+    scale: 1.03;
+  }
+
+  @media (min-width: 0) {
+    height: 590px;
+  }
+  @media (min-width: 400px) {
+    height: 590px;
     .row {
-        height: 100%;
-        max-width: 1250px;
-        margin: 0px auto;
-        padding: 50px 0;
+      padding: 20px 0px;
     }
-    .col {
-        padding: 20px;
+  }
+  @media (min-width: 450px) {
+    height: 600px;
+  }
+  @media (min-width: 480px) {
+    height: 630px;
+
+    .row {
+      padding: 10px 0px;
     }
-    .col h2 {
-        color: #2d63f7;
-        text-transform: uppercase;
-        text-align: center;
-        font-weight: 900;
-        font-size: 170%;
-        margin-bottom: 20px;
-        letter-spacing: 1px;
-        word-spacing: 5px;
-    }
-    .col img {
-        border: 4px solid #2d63f7;
-        border-radius: 20px;
-        transition: 0.3s;
-    }
-    .col img:hover,
-    .col img:active {
-        scale: 1.03;
-    }
+  }
+  @media (min-width: 510px) {
+    height: 660px;
+  }
+  @media (min-width: 540px) {
+    height: 690px;
+  }
+  @media (min-width: 570px) {
+    height: 720px;
+  }
+  @media (min-width: 600px) {
+    height: 750px;
+  }
+  @media (min-width: 630px) {
+    height: 780px;
+  }
+  @media (min-width: 660px) {
+    height: 810px;
+  }
+  @media (min-width: 690px) {
+    height: 840px;
+  }
+  @media (min-width: 720px) {
+    height: 870px;
+  }
+  @media (min-width: 760px) {
+    height: 910px;
+  }
+  @media (min-width: 800px) {
+    height: 950px;
+  }
+  @media (min-width: 840px) {
+    height: 990px;
+  }
+  @media (min-width: 890px) {
+    height: 1040px;
+  }
+  @media (min-width: 940px) {
+    height: 1090px;
+  }
+  @media (min-width: 1000px) {
+    height: 650px;
+  }
+  @media (min-width: 1100px) {
+    height: 740px;
+  }
+  @media (min-width: 1200px) {
+    height: 800px;
+  }
 }
