--- a/src/components/Footter/index.vue.scss
+++ b/src/components/Footter/index.vue.scss
@@ -21,6 +21,9 @@
         @media (min-width: 850px) {
             display: flex;
         }
+        @media (max-width: 700px) {
+            flex-direction: column;
+        }
         flex-direction: row;
         justify-content: center;
         margin-left: auto;
@@ -40,6 +43,12 @@
     flex-direction: column;
     margin: 0;
     padding: 0 15px 0;
+    @media (max-width: 700px) {
+        max-width: 75%;
+        h4 {
+            margin-bottom: 0;
+        }
+    }
     h4 {
         font-weight: 500;
         font-size: 18px;
