--- a/src/components/PurposeJoin/index.vue.scss
+++ b/src/components/PurposeJoin/index.vue.scss
@@ -12,7 +12,6 @@
 }
 
 .tabbed-content {
-    width: 36%;
     @media (max-width: 1024px) {
         width: 100%;
     }
@@ -51,8 +50,15 @@
     @media (max-width: 800px) {
         img {
             margin-top: 30px;
-            height: 50%;
-            width: auto !important;
+            width: 600px;
+            height: 300px;
+        }
+    }
+    @media (max-width: 500px) {
+        img {
+            margin-top: 30px;
+            width: 350px;
+            height: 200px;
         }
     }
 }
@@ -75,6 +81,7 @@ img {
     width: 720px;
     height: 542px;
     object-fit: cover;
+    border-radius: 15px;
 }
 
 .img-visible {
