--- a/src/components/TermSection/index.vue.scss
+++ b/src/components/TermSection/index.vue.scss
@@ -102,6 +102,9 @@
     margin-left: auto;
     margin-right: auto;
     transform: skewX(348deg);
+    @media (max-width: 550px) {
+        font-size: 38px;
+    }
     span {
         display: table-cell;
         font-weight: bolder;
