--- a/src/components/EventMap/index.vue.scss
+++ b/src/components/EventMap/index.vue.scss
@@ -23,50 +23,106 @@
   }
   .row {
     height: 100%;
-    max-width: 1172px;
-    margin: 0px auto;
-    padding: 3% 0;
-  }
-  .devider {
-    height: 100%;
-    width: 5%;
-    float: left;
+    max-width: 1250px;
+    margin: 30px auto;
   }
   .col {
+    padding: 20px;
     height: 100%;
-    width: 47.5%;
-    float: left;
   }
   .col h2 {
     color: #2d63f7;
     text-transform: uppercase;
+    text-align: start;
     font-weight: 900;
     font-size: 150%;
     margin-bottom: 20px;
+    letter-spacing: 1px;
+    word-spacing: 5px;
   }
   .col img {
-    // height: 100%;
     border: 4px solid #2d63f7;
     border-radius: 20px;
     transition: 0.3s;
+    height: 92%;
   }
   .col img:hover,
   .col img:active {
     scale: 1.03;
   }
-  @media only screen and (max-width: 550px) {
-    .devider {
-      width: 100%;
-      height: 10%;
+
+  @media (min-width: 0) {
+    height: 590px;
+
+    .col h2 {
+      text-align: center;
     }
-    .col {
-      width: 90%;
-      height: 40%;
-      margin-left: 5%;
+  }
+  @media (min-width: 400px) {
+    height: 590px;
+    .row {
+      padding: 20px 0px;
     }
-    .col img {
-      height: 100%;
+  }
+  @media (min-width: 450px) {
+    height: 600px;
+  }
+  @media (min-width: 480px) {
+    height: 630px;
+
+    .row {
+      padding: 10px 0px;
     }
-    height: 1000px;
+  }
+  @media (min-width: 510px) {
+    height: 660px;
+  }
+  @media (min-width: 540px) {
+    height: 690px;
+  }
+  @media (min-width: 570px) {
+    height: 720px;
+  }
+  @media (min-width: 600px) {
+    height: 750px;
+  }
+  @media (min-width: 630px) {
+    height: 780px;
+  }
+  @media (min-width: 660px) {
+    height: 810px;
+  }
+  @media (min-width: 690px) {
+    height: 840px;
+  }
+  @media (min-width: 720px) {
+    height: 870px;
+  }
+  @media (min-width: 760px) {
+    height: 910px;
+  }
+  @media (min-width: 800px) {
+    height: 950px;
+  }
+  @media (min-width: 840px) {
+    height: 990px;
+  }
+  @media (min-width: 890px) {
+    height: 1040px;
+  }
+  @media (min-width: 940px) {
+    height: 1090px;
+  }
+  @media (min-width: 1000px) {
+    height: 650px;
+    .col h2 {
+      text-align: start;
+    }
+  }
+  @media (min-width: 1100px) {
+    height: 700px;
+  }
+  @media (min-width: 1200px) {
+    height: 800px;
   }
 }
