--- a/src/components/EventMap/index.vue.scss
+++ b/src/components/EventMap/index.vue.scss
@@ -44,7 +44,7 @@
     border: 4px solid #2d63f7;
     border-radius: 20px;
     transition: 0.3s;
-    height: 92%;
+    height: 90%;
   }
   .col img:hover,
   .col img:active {
@@ -52,16 +52,45 @@
   }
 
   @media (min-width: 0) {
-    height: 590px;
+    height: 400px;
 
     .col h2 {
       text-align: center;
+      font-size: 85%;
+    }
+  }
+  @media (min-width: 300px) {
+    height: 450px;
+
+    .col h2 {
+      text-align: center;
+      font-size: 100%;
+    }
+  }
+  @media (min-width: 350px) {
+    height: 480px;
+
+    .col h2 {
+      text-align: center;
+      font-size: 120%;
+    }
+  }
+  @media (min-width: 380px) {
+    height: 500px;
+
+    .col h2 {
+      text-align: center;
+      font-size: 120%;
     }
   }
   @media (min-width: 400px) {
     height: 590px;
     .row {
       padding: 20px 0px;
+    }
+    .col h2 {
+      text-align: center;
+      font-size: 150%;
     }
   }
   @media (min-width: 450px) {
