--- a/src/components/Prize/index.vue.scss
+++ b/src/components/Prize/index.vue.scss
@@ -50,12 +50,24 @@
   }
 
   @media (min-width: 0) {
-    height: 590px;
+    height: 400px;
+    .col h2 {
+      font-size: 90%;
+    }
+  }
+  @media (min-width: 300px) {
+    height: 450px;
+    .col h2 {
+      font-size: 100%;
+    }
   }
   @media (min-width: 400px) {
     height: 590px;
     .row {
       padding: 20px 0px;
+    }
+    .col h2 {
+      font-size: 140%;
     }
   }
   @media (min-width: 450px) {
@@ -79,6 +91,9 @@
   }
   @media (min-width: 600px) {
     height: 750px;
+    .col h2 {
+      font-size: 160%;
+    }
   }
   @media (min-width: 630px) {
     height: 780px;
@@ -109,6 +124,9 @@
   }
   @media (min-width: 1000px) {
     height: 650px;
+    .col h2 {
+      font-size: 170%;
+    }
   }
   @media (min-width: 1100px) {
     height: 740px;
