--- a/src/components/TermSection/index.vue.scss
+++ b/src/components/TermSection/index.vue.scss
@@ -45,6 +45,13 @@
     img {
         width: 100%;
         border-radius: 10px;
+        scale: 1.45;
+        margin-left: 40px;
+        @media (max-width: 850px) {
+            scale: 1;
+            margin-top: 60px;
+            margin-left: 0;
+        }
     }
 }
 
