--- a/src/components/TermSection/index.vue.scss
+++ b/src/components/TermSection/index.vue.scss
@@ -48,9 +48,10 @@
         scale: 1.45;
         margin-left: 40px;
         @media (max-width: 850px) {
-            scale: 1;
+            scale: 1.12;
             margin-top: 60px;
             margin-left: 0;
+            padding-bottom: 12px;
         }
     }
 }
