--- a/src/components/EventMap/index.vue.scss
+++ b/src/components/EventMap/index.vue.scss
@@ -52,11 +52,19 @@
   }
 
   @media (min-width: 0) {
-    height: 400px;
+    height: 350px;
 
     .col h2 {
       text-align: center;
       font-size: 85%;
+    }
+  }
+  @media (min-width: 250px) {
+    height: 400px;
+
+    .col h2 {
+      text-align: center;
+      font-size: 100%;
     }
   }
   @media (min-width: 300px) {
