--- change color image

--- a/src/components/SignUp/index.vue.scss
+++ b/src/components/SignUp/index.vue.scss
@@ -16,7 +16,7 @@
         top: 0;
     }
     .section-bg-overlay {
-        background-image: linear-gradient(white, #a4ffff, #38beff);
+        background-image: linear-gradient(white 2%, #a4ffff 24%, #38beff 75%);
     }
     .content {
         height: 100%;
