--- a/src/components/TermSection/index.vue.scss
+++ b/src/components/TermSection/index.vue.scss
@@ -74,7 +74,7 @@
         cursor: pointer;
         display: inline-block;
         font-size: .97em;
-        font-weight: bolder;
+        font-weight: 600;
         letter-spacing: .03em;
         line-height: 2.4em;
         margin-right: 1em;
