--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body {
+html {
     font-family: Inter, sans-serif;
     color: #f1f1f1;
 }
