--- a/src/components/RegisterSection/index.vue.scss
+++ b/src/components/RegisterSection/index.vue.scss
@@ -50,7 +50,7 @@
 }
 
 button {
-    background-color: rgb(230, 195, 125);
+    background-color: #ffbe4e;
     border-radius: 20px;
     color: #000;
     font-weight: 700;
