--- a/src/components/TermSection/index.vue.scss
+++ b/src/components/TermSection/index.vue.scss
@@ -8,6 +8,7 @@
     background-size: cover !important;
     .section-bg-overlay {
         background-image: linear-gradient(white, #a4ffff, #38beff);
+        opacity: 0.86;
     }
 }
 
