--- a/src/components/EventMap/index.vue.scss
+++ b/src/components/EventMap/index.vue.scss
@@ -52,19 +52,47 @@
   }
 
   @media (min-width: 0) {
-    height: 350px;
+    height: 300px;
 
     .col h2 {
       text-align: center;
-      font-size: 85%;
+      font-size: 40%;
+    }
+    .col img {
+      height: 170px;
+    }
+  }
+  @media (min-width: 200px) {
+    height: 320px;
+
+    .col h2 {
+      text-align: center;
+      font-size: 50%;
+    }
+    .col img {
+      height: 180px;
     }
   }
   @media (min-width: 250px) {
+    height: 380px;
+
+    .col h2 {
+      text-align: center;
+      font-size: 75%;
+    }
+    .col img {
+      height: 250px;
+    }
+  }
+  @media (min-width: 270px) {
     height: 400px;
 
     .col h2 {
       text-align: center;
-      font-size: 100%;
+      font-size: 80%;
+    }
+    .col img {
+      height: 250px;
     }
   }
   @media (min-width: 300px) {
@@ -74,6 +102,9 @@
       text-align: center;
       font-size: 100%;
     }
+    .col img {
+      height: 300px;
+    }
   }
   @media (min-width: 350px) {
     height: 480px;
@@ -81,6 +112,9 @@
     .col h2 {
       text-align: center;
       font-size: 120%;
+    }
+    .col img {
+      height: 340px;
     }
   }
   @media (min-width: 380px) {
@@ -90,6 +124,9 @@
       text-align: center;
       font-size: 120%;
     }
+    .col img {
+      height: 360px;
+    }
   }
   @media (min-width: 400px) {
     height: 590px;
@@ -98,17 +135,27 @@
     }
     .col h2 {
       text-align: center;
-      font-size: 150%;
+      font-size: 140%;
+    }
+    .col img {
+      height: 390px;
     }
   }
   @media (min-width: 450px) {
     height: 600px;
+    .col img {
+      height: 400px;
+    }
   }
   @media (min-width: 480px) {
     height: 630px;
 
     .row {
       padding: 10px 0px;
+    }
+
+    .col img {
+      height: 90%;
     }
   }
   @media (min-width: 510px) {
