--- a/src/components/TermSection/index.vue.scss
+++ b/src/components/TermSection/index.vue.scss
@@ -46,12 +46,42 @@
     img {
         width: 100%;
         border-radius: 10px;
-        scale: 1.45;
+        scale: 1.41;
         margin-left: 70px;
-        @media (max-width: 1000px) {
+        transition: scale 500ms ease-in-out;
+        @media (max-width: 1100px) {
             scale: 1;
             margin-top: 60px;
             margin-left: 0;
+        }
+        @media (max-width: 1600px) {
+            scale: 1.4;
+            margin-left: 55px;
+        }
+        @media (max-width: 1500px) {
+            scale: 1.32;
+            margin-left: 40px;
+            margin-top: 40px;
+        }
+        @media (max-width: 1450px) {
+            scale: 1.28;
+            margin-left: 40px;
+            margin-top: 40px;
+        }
+        @media (max-width: 1400px) {
+            scale: 1.24;
+            margin-left: 30px;
+            margin-top: 58px;
+        }
+        @media (max-width: 1369px) {
+            scale: 1.12;
+            margin-left: 0;
+            margin-top: 108px;
+        }
+        @media (max-width: 1260px) {
+            scale: 1;
+            margin-left: 0;
+            margin-top: 128px;
         }
     }
 }
@@ -128,7 +158,7 @@
             font-size: 30%;
             opacity: .7;
             text-transform: uppercase;
-            font-weight: 300;
+            font-weight: 400;
             display: block;
         }
     }
