--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
+@import url(../assets/font/inter/stylesheet.css);
 @import url(../assets/css/main.scss);
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html {
+body {
     font-family: Inter, sans-serif;
     color: #f1f1f1;
 }
