--- a/src/components/SignUp/index.vue.scss
+++ b/src/components/SignUp/index.vue.scss
@@ -1,83 +1,87 @@
 .section-bg {
-    background-image: url(../../../assets/images/signup_bgr.jpg);
-    width: 100%;
-    height: 342px;
-    background-position: 50% 50%;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    opacity: 1;
-    .fill {
-        height: 100%;
-        left: 0;
-        margin: 0 !important;
-        padding: 0 !important;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .section-bg-overlay {
-        background-image: linear-gradient(white 2%, #a4ffff 24%, #38beff 75%);
-        opacity: 0.86;
-    }
-    .content {
-        height: 100%;
-    }
-    .row {
-        height: 100%;
-        max-width: 1172px;
-        margin: 0px auto;
-        padding: 50px 0;
-    }
+  background-image: url(../../../assets/images/signup_bgr.jpg);
+  width: 100%;
+  height: 342px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  opacity: 1;
+  .fill {
+    height: 100%;
+    left: 0;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .section-bg-overlay {
+    background-image: linear-gradient(
+      rgba(255, 255, 255, 0.9) 2%,
+      rgba(164, 255, 255, 0.9) 24%,
+      rgba(56, 190, 255, 0.9) 75%
+    );
+  }
+  .content {
+    height: 100%;
+  }
+  .row {
+    height: 100%;
+    max-width: 1172px;
+    margin: 0px auto;
+    padding: 50px 0;
+  }
+  p {
+    font-size: 180%;
+    font-weight: 700;
+    color: #214184;
+    text-align: center;
+    font-style: italic;
+    padding-bottom: 40px;
+  }
+  .hightlight-text {
+    color: #000;
+    background-color: #e1c184;
+  }
+  button {
+    background-color: #ffbe4e;
+    border-radius: 20px;
+    color: #000;
+    font-weight: 700;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+  }
+  button:hover,
+  button:active {
+    background-color: rgb(245, 202, 102);
+  }
+  .button-content {
+    padding: 10px 30px;
+  }
+  @media (min-width: 100px) {
     p {
-        font-size: 180%;
-        font-weight: 700;
-        color: #fdb913;
-        text-align: center;
-        font-style: italic;
-        padding-bottom: 40px;
+      font-size: 100%;
     }
-    // .hightlight-text {
-    //     color: #fff;
-    // }
-    button {
-        background-color: #ffbe4e;
-        border-radius: 20px;
-        color: #000;
-        font-weight: 700;
-        position: relative;
-        left: 50%;
-        transform: translate(-50%);
+  }
+  @media (min-width: 300px) {
+    p {
+      font-size: 110%;
     }
-    button:hover,
-    button:active {
-        background-color: rgb(245, 202, 102);
+  }
+  @media (min-width: 500px) {
+    p {
+      font-size: 130%;
     }
-    .button-content {
-        padding: 10px 30px;
+  }
+  @media (min-width: 600px) {
+    p {
+      font-size: 150%;
     }
-    @media (min-width: 100px) {
-        p {
-            font-size: 100%;
-        }
+  }
+  @media (min-width: 900px) {
+    p {
+      font-size: 170%;
     }
-    @media (min-width: 300px) {
-        p {
-            font-size: 110%;
-        }
-    }
-    @media (min-width: 500px) {
-        p {
-            font-size: 130%;
-        }
-    }
-    @media (min-width: 600px) {
-        p {
-            font-size: 150%;
-        }
-    }
-    @media (min-width: 900px) {
-        p {
-            font-size: 170%;
-        }
-    }
+  }
 }
