--- a/src/components/AdvertiseSection/index.vue.scss
+++ b/src/components/AdvertiseSection/index.vue.scss
@@ -27,14 +27,14 @@
     contain: layout style;
     position: relative !important;
     .row {
-        @media (min-width: 850px) {
-            display: flex;
-        }
-        flex-direction: row;
-        justify-content: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
         margin-left: auto;
         margin-right: auto;
         max-width: 1200px;
+        @media (max-width: 850px) {
+            grid-template-columns: repeat(1, 1fr);
+        }
     }
     img {
         width: 100%;
@@ -52,14 +52,4 @@
     justify-content: center;
     margin: 0;
     padding: 0 15px 30px;
-    @media (min-width: 850px) {
-        &.large-5 {
-            flex-basis: math.percentage(math.div(5, 12));
-            max-width: math.percentage(math.div(5, 12));
-        }
-        &.large-7 {
-            flex-basis: math.percentage(math.div(7, 12));
-            max-width: math.percentage(math.div(7, 12));
-        }
-    }
 }
