--- a/src/components/TermSection/index.vue.scss
+++ b/src/components/TermSection/index.vue.scss
@@ -83,6 +83,11 @@
             margin-left: 0;
             margin-top: 128px;
         }
+        @media (max-width: 800px) {
+            scale: 1.056;
+            margin-left: 0;
+            margin-top: 40px;
+        }
     }
 }
 
