--- a/src/components/EventMap/index.vue.scss
+++ b/src/components/EventMap/index.vue.scss
@@ -18,11 +18,8 @@
   .section-bg-overlay {
     background-color: rgba(255, 255, 255, 0.866);
   }
-  .content {
-    height: 100%;
-  }
+
   .row {
-    height: 100%;
     max-width: 1250px;
     margin: 30px auto;
   }
@@ -44,7 +41,7 @@
     border: 4px solid #2d63f7;
     border-radius: 20px;
     transition: 0.3s;
-    height: 90%;
+    height: 650px;
   }
   .col img:hover,
   .col img:active {
